# TruthTable

./: main.py  pyproject.toml
