[tool.poetry]
name = "repl_python3_TruthTable"
version = "0.1.0"
description = ""
authors = ["NikitaDakt <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
XlsxWriter = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
